# ORM_querys

./: config.ini  my_select.py  pyproject.toml
migration/versions/: 52b68facf58d_init.py
seed/: seed.py
src/: db.py  models.py
